--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         to add them to your wishlist
       </p>
     </box>
+    <!-- <div id="bottomBoxes"> -->
     <box id="inputBox">
       <form>
         <br />
@@ -33,5 +34,6 @@
       <h2>Enter Destination details</h2>
       <box id="insideBox"> </box>
     </box>
+    <!-- </div> -->
   </body>
 </html>
